--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: fddd77698e7701d0bde10ac5a9d04186aea14aee3ff5635830d6500fbe4a1587; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 4f31b5559987bcd46bc615d5ed8ac2a75e1697903ee530edc5396b507193433d; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an Org file using file local variables
 #+options: num:nil \n:nil
@@ -148,6 +148,8 @@ accept the local variables. This only needs to be done once for the
 
 This is the =orgstrap= block that is used for this file.
 
+# FIXME the -r -l is kind of needed here deal with ref blocks
+# FIXME this is an internal inconsistency in babel
 #+caption: The =orgstrap= block that is used for this file.
 #+name: orgstrap
 #+begin_src elisp :results none :noweb no-export :lexical yes
@@ -546,6 +548,7 @@ The portable confirm eval is extracted to its own block so that we can
 include it as a backstop for users who have orgstrap installed but are
 running an older version of =org-mode= than is supported by the file
 that they are trying to load.
+
 #+caption: Portable confirm eval.
 #+name: orgstrap-portable-confirm-eval
 #+begin_src elisp :eval never :noweb yes
@@ -627,7 +630,7 @@ Here is the prop line from the first line of this file that
 includes the cypher and checksum of the =orgstrap= block.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: fddd77698e7701d0bde10ac5a9d04186aea14aee3ff5635830d6500fbe4a1587; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 0c3abc0bd4db22e8994f3bb6d7d68c6f6ac898a4e004e3ab8241b3be0b9fe892; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.1; -*-
 #+end_src
 
 # BE VERY CAREFUL WITH MANUAL EDITS
@@ -876,7 +879,7 @@ COMMAND should be `hack-local-variables-confirm' with ARGS (all-vars
 unsafe-vars risky-vars dir-name)."
   (advice-remove #'hack-local-variables-confirm #'orgstrap--hack-lv-confirm)
   (cl-destructuring-bind (all-vars unsafe-vars risky-vars dir-name)
-      ;; emacs 28 doesn't alias the non cl- prefixed form so use unaliased?
+      ;; emacs 28 doesn't alias the non cl- prefixed form so use unaliased
       (mapcar (lambda (arg)
                 (if (listp arg)
                     ;; We must use `cl-delete-if' on all-vars,
@@ -993,6 +996,9 @@ ARGS will vary depending in which function was advised."
 #+name: orgstrap-edit-helper-defuns
 #+begin_src emacs-lisp :results none :lexical yes :noweb yes
 ;;; edit helpers
+(defvar orgstrap--clone-stamp-source-buffer-block nil
+  "Source code buffer and block for `orgstrap-stamp'.")
+
 (defcustom orgstrap-on-change-hook nil
   "Hook run via `before-save-hook' when command `orgstrap-edit-mode' is enabled.
 Only runs when the contents of the orgstrap block have changed."
@@ -1069,6 +1075,69 @@ and then run `orgstrap-on-change-hook'."
             (run-hooks 'orgstrap-on-change-hook))
         (add-hook 'before-save-hook #'orgstrap--update-on-change nil t)))))
 
+(defun orgstrap--get-actual-params (params)
+  "Filter defaults, nulls, and junk from src block PARAMS."
+  (let ((defaults (append org-babel-default-header-args
+                          org-babel-default-header-args:emacs-lisp)))
+    (cl-remove-if (lambda (pair)
+                    (or (member pair defaults)
+                        (memq (car pair) '(:result-params :result-type))
+                        (null (cdr pair))))
+                  params)))
+
+(defun orgstrap-header-source-element (header-name &optional block-name &rest more-names)
+  "Given HEADER-NAME find the element that provides its value.
+If BLOCK-NAME is non-nil then search for headers for that block,
+otherwise search for headers associated with the current block."
+  ;; get the current headers, see if the value is set anywhere
+  ;; or if it is default, search for default anyway just to be sure
+  ;; return nil if not found
+  ;; when searching for any header go to the end of the src line
+  ;; `re-search-backward' from that point for :header-arg but not
+  ;; going beyond the affiliated keywords for the current element
+  ;; (if you can get affiliated keywords for the current element
+  ;; that might simplify the search as well? check the impl for how
+  ;; the actual values are obtained during execution etc)
+  ;; when found use `org-element-at-point' to obtain the element
+
+  ;; in another function the operates on the element
+  ;; the element will give start, end, value, etc.
+  ;; find bounds of value from element or sub element
+  ;; delete the value, replace with new value
+  (error "Not implemented TODO"))
+
+(defun orgstrap-update-src-block-header (name new-params &optional update)
+  "Add header arguments to block NAME from NEW-PARAMS from some other block.
+Existing header arguments will NOT be removed if they are not included in
+NEW-PARAMS. If UPDATE is non-nil existing header arguments are updated."
+  (let ((defaults (append org-babel-default-header-args
+                          org-babel-default-header-args:emacs-lisp))
+        (new-act-params (orgstrap--get-actual-params new-params)))
+    (orgstrap--with-block name
+      (ignore body body-unexpanded)
+      (let ((existing-act-params (orgstrap--get-actual-params params)))
+        (dolist (pair new-act-params)
+          (cl-destructuring-bind (key . value)
+              pair
+            (let ((header-arg (substring (symbol-name key) 1)))
+              (if (assq key existing-act-params)
+                  (if update
+                      (unless (member pair existing-act-params)
+                        ;; TODO remove existing
+                        ;; `org-babel-insert-header-arg' does not remove
+                        ;; and it is not trivial to find the actual location
+                        ;; of an existing header argument there are 4 places
+                        ;; that we will have to look and then in some cases
+                        ;; we will have to append even if we do find them
+                        (org-babel-insert-header-arg header-arg value)
+                        ;; This message works around the fact that we don't
+                        ;; have replace here, only append TODO consider
+                        ;; changing the way update works to be nil, replace,
+                        ;; or append once an in-place replace is implemented
+                        (message "%s superseded for block %s." key name))
+                    (warn "%s already defined for block %s!" key name))
+                (org-babel-insert-header-arg header-arg value)))))))))
+
 ;; edit user facing functions
 (defun orgstrap-get-block-checksum (&optional cypher)
   "Calculate the `orgstrap-block-checksum' for the current buffer using CYPHER."
@@ -1103,57 +1172,62 @@ directly if it has been calculated before and only needs to be set."
     (org-babel-goto-named-src-block orgstrap-orgstrap-block-name)
     (org-babel-execute-src-block)))
 
-(defvar orgstrap-clone--body-params nil
-  "Current source block body and parameters for clone operations.")
-(defvar orgstrap-clone--source-buffer nil
-  "Source buffer whose orgstrap block serves as the source for clone operations.")
-(defun orgstrap-clone-mark-source ()
-  "Mark the current buffer as the source for `orgstrap-clone'."
-  (interactive)
-  (if (orgstrap--used-in-current-buffer-p)
-      (setq orgstrap-clone--source-buffer (current-buffer))
-    (message "orgstrap is not used in the current buffer!")))
-
-(defun orgstrap-clone-mark-block ()
-  "Mark an arbitrary source block to clone to an orgstrap block."
-  (interactive)
-  (error "Not implemented. TODO"))
-
-(defun orgstrap-update-src-block-header (name new-params)
-  "Add header arguments to block NAME from NEW-PARAMS from some other block.
-Existing header arguments will NOT be removed if they are not included in
-NEW-PARAMS."
-  (let ((defaults (append org-babel-default-header-args
-                          org-babel-default-header-args:emacs-lisp)))
-    (orgstrap--with-block name
-      (ignore body body-unexpanded)
-      (dolist (pair new-params)
-        (cl-destructuring-bind (key . value)
-            pair
-          (when (and value
-                     (not (memq key '(:result-params :result-type)))
-                     (not (member pair defaults)))
-            (let ((header-arg (symbol-name key)))
-              (org-babel-insert-header-arg header-arg value))))))))
-
-(defun orgstrap-clone (&optional universal-argument overwrite)
-  "Clone orgstrap block via `orgstrap-clone-mark-source' to current buffer.
-If UNIVERSAL-ARGUMENT is '(64) aka (C-u C-u) this will OVERWRITE any existing
-block.  If you are not calling this interactively all as (orgstrap-clone nil t)
-for calirty.  You cannot clone an orgstrap block into its own buffer."
+(defun orgstrap-clone (&optional universal-argument)
+  "Set current block or orgstrap block as the source for `orgstrap-stamp'.
+If a universal argument is supplied then the orgstrap block is always used."
+  ;; TODO consider whether to avoid the inversion of behavior around C-u
+  ;; namely that nil -> always from orgstrap block, C-u -> current block
+  ;; this would avoid confusion where unprefixed could produce both
+  ;; behaviors and only switch when already on a src block
   (interactive "P")
+  (let ((current-element (org-element-at-point))
+        (current-buffer (current-buffer)))
+    (if (and (eq (org-element-type current-element) 'src-block)
+             (not universal-argument))
+        (let ((block-name (org-element-property :name current-element)))
+          (if block-name
+              (setq orgstrap--clone-stamp-source-buffer-block
+                    (cons current-buffer block-name))
+            (warn "The current block has no name, it cannot be a clone source!")))
+      (if (orgstrap--used-in-current-buffer-p)
+          (setq orgstrap--clone-stamp-source-buffer-block
+                (cons current-buffer orgstrap-orgstrap-block-name))
+        (warn "orgstrap is not used in the current buffer!")))))
+
+(defun orgstrap-stamp (&optional universal-argument overwrite)
+  "Stamp orgstrap block via `orgstrap-clone' to current buffer.
+If UNIVERSAL-ARGUMENT is '(16) aka (C-u C-u) this will OVERWRITE any existing
+block.  If you are not calling this interactively all as (orgstrap-stamp nil t)
+for calirty.  You cannot stamp an orgstrap block into its own buffer."
+  (interactive "P")
+  (unless (eq major-mode 'org-mode)
+    (user-error "`orgstrap-stamp' only works in org-mode buffers"))
   (let ((overwrite (or overwrite (equal universal-argument '(16))))
-        (source-buffer orgstrap-clone--source-buffer)
+        (source-buffer (car orgstrap--clone-stamp-source-buffer-block))
+        (source-block-name (cdr orgstrap--clone-stamp-source-buffer-block))
         (target-buffer (current-buffer)))
     (when (eq source-buffer target-buffer)
-      (error "Source and target are the same buffer!"))
-    (cl-destructuring-bind (source-body . source-params)
-        (with-current-buffer source-buffer
-          (orgstrap--with-block orgstrap-orgstrap-block-name
-            (ignore body-unexpanded)
-            (cons body params)))
-      (orgstrap--add-orgstrap-block source-body)
-      (orgstrap-update-src-block-header orgstrap-orgstrap-block-name))))
+      (error "Source and target are the same buffer. Not stamping!"))
+    (cl-destructuring-bind (source-body
+                            source-params
+                            org-adapt-indentation
+                            org-edit-src-content-indentation)
+        (save-window-excursion
+          (with-current-buffer source-buffer
+            (orgstrap--with-block source-block-name
+              (ignore body-unexpanded)
+              (list body
+                    params
+                    org-adapt-indentation
+                    org-edit-src-content-indentation))))
+      (if (and (not overwrite)
+               (member orgstrap-orgstrap-block-name
+                       (org-babel-src-block-names)))
+          (warn "orgstrap block already exists not stamping!")
+        (orgstrap--add-orgstrap-block source-body) ; FIXME somehow the hash is different !?!??!
+        (orgstrap-update-src-block-header orgstrap-orgstrap-block-name source-params t)
+        (orgstrap-add-block-checksum) ; I think it is correct to add the checksum here
+        (message "Stamped orgsrap block from %s" (buffer-file-name source-buffer))))))
 
 ;;;###autoload
 (define-minor-mode orgstrap-edit-mode
@@ -1188,6 +1262,12 @@ don't currently support anything below 23. Then use =cl-remove-if-not=.
 There is a similar issue with =pcase=, which is that in =emacs-24= the
 syntax was closer to =cl-case= when dealing with symbols. Since =cl-lib=
 is already in use, =cl-case= is the logical solution for portability.
+
+Not all functionality works in older versions of Org. For example see
+[[(obubb-issue)][update block issue]] which is caused by the fact that
+~org-babel-update-block-body~ is broken prior to revision
+orgit-rev:~/git/NOFORK/org-mode::7d6b8f51ec1993a66a385b98b2df42d0853fe289
+which is not present in the versions of Org released with Emacs < 26.
 
 #+caption: init helpers
 #+name: orgstrap-init-helper-defuns
@@ -1274,10 +1354,11 @@ Please update `orgstrap-norm-func-name' to `orgstrap-norm-func--prp-1.1'"))
     (if minimal
         '(
           <<orgstrap-minimal-confirm-eval>>)
-      '(
-        <<orgstrap-expand-body>>
+      '( ;(ref:elv-noweb-issue)
+;; if you automatically reindent it will break these two
+<<orgstrap-expand-body>>
 
-        <<orgstrap-portable-confirm-eval>>))))
+<<orgstrap-portable-confirm-eval>>))))
 
 (defun orgstrap--local-variables--eval-common ()
   "Return the common eval check functions for local variables."
@@ -1355,7 +1436,7 @@ If a block with that name already exists raise an error."
   (interactive)
   (let ((all-block-names (org-babel-src-block-names)))
     (if (member orgstrap-orgstrap-block-name all-block-names)
-        (message "orgstrap block already exists not adding!")
+        (warn "orgstrap block already exists not adding!")
       (orgstrap--new-heading-elisp-block "Bootstrap"
                                          orgstrap-orgstrap-block-name
                                          '((results . none)
@@ -1364,7 +1445,13 @@ If a block with that name already exists raise an error."
       (orgstrap--with-block orgstrap-orgstrap-block-name
         (ignore params body-unexpanded body)
         (when block-contents
-          (org-babel-update-block-body block-contents))
+          ;; FIXME `org-babel-update-block-body' is broken in < 26 (ref:obubb-issue)
+          ;; for now warn and fail if the version is known bad NOTE trying to backport
+          ;; is not simple because there are changes to the function signatures
+          (if (string< org-version "8.3.4")
+              (warn "Your version of Org is too old to use this feature! %s < 8.3.4"
+                    org-version)
+            (org-babel-update-block-body block-contents)))
         nil))))
 
 (defun orgstrap--add-file-local-variables (&optional minimal norm-func-name)
@@ -1434,6 +1521,17 @@ the minimal local variables will be used if possible."
     (orgstrap-edit-mode)))
 #+end_src
 
+# Note that multi-line strings cause issues with indentation if they are
+# nowebbed with leading whitespace. We avoid this by left aligning the
+# [[(elv-noweb-issue)][noweb references]] so that no leading whitespace
+# is inserted. This is something to watch out for in general when trying
+# to ensure consistent hashing.
+
+# I suspect that the underlying issue may be an org-mode bug related
+# to incorrect handling of leading whitespace when inserting contents
+# into a new block
+
+# dedoc testing
 # (orgstrap--dedoc '(defvar lol 'hello))
 # (orgstrap--dedoc '(defvar lol 'hello "there"))
 # (orgstrap--dedoc '(defun lol () "there" 1))
@@ -1763,19 +1861,30 @@ Things that need to be done for a release.
 :CUSTOM_ID: changelog
 :END:
 ** 1.2.4
-- Add ~orgstrap-clone~ and ~orgstrap-clone-mark-source~ commands.
+- Add ~orgstrap-clone~ and ~orgstrap-stamp~ commands.
 
-  ~orgstrap-clone~ clones another orgstrap block from a buffer marked
-  via ~orgstrap-clone-mark-source~ to be the block for the current
-  buffer. Useful in cases where users want to duplicate functionality
-  in a new file.
+  ~orgstrap-clone~ stores the current buffer and current or orgstrap
+  block ~orgstrap-stamp~ copies the expanded contents and headers of
+  that block to a new orgstrap block in a new file.  Useful in cases
+  where users want to duplicate functionality in a new file.
+
+  NOTE ~orgstrap-stamp~ only works for org version >= 8.3.4 which
+  means that it does not work for versions of Emacs < 26.
 
 - ~orgstrap--add-orgstrap-block~ add ~block-contents~ argument.
 
-  This simplifies the implementation of clone, and makes it possible
+  This simplifies the implementation of stamp, and makes it possible
   to set the initial contents of the orgstrap block programmatically.
+  There are some lingering issues with indentation that may need to
+  be resolved for this to work seamlessly.
 
 - Fix byte compile bug from destructuring-bind not being aliased.
+
+- Fix for issues with noweb blocks containing multi-line docstrings.
+
+  We need this to test ~orgstrap-clone~ with this readme file. Without it
+  the checksum will not match in the stamped file due to differences in
+  the leading whitespace in docstrings.
 
 - Make ~orgstrap-revoke-eval-local-variables~ obsolete.
 
@@ -2333,12 +2442,17 @@ the string output of the process.
 *** +reval+ reload
 Remote +eval+ load. Ephemeral code reuse. Somewhere between load
 eval, and securl then load. More auditable and stable curl pipe bash.
+
+At the moment the serialization of the whole file is used rather than
+one of the normalized prp variants. This might be added in the future,
+but the objective of reval is to be small enough that it will fit in
+the remaining space in the orgstrap elv it probably won't happen.
 #+begin_src elisp :lexical yes
 (defvar reval-failed-buffer-list nil "List of failed reval buffers.")
 
 (defun id->buffer (path-or-url)
   "Given a PATH-OR-URL return a buffer of its contents."
-  ;; We explicitly do not catch errors here since they need should
+  ;; We explicitly do not catch errors here since they need to
   ;; be caught by the human in the loop later.
   (if url-handler-mode
       (find-file-noselect path-or-url)
@@ -2348,7 +2462,7 @@ eval, and securl then load. More auditable and stable curl pipe bash.
           (find-file-noselect path-or-url))
       (url-handler-mode))))
 
-(defun resum (cypher buffer &optional review)
+(defun resum-review (cypher buffer &optional review)
   "Return checksum under CYPHER for BUFFER.
 If REVIEW is non-nil then switch to BUFFER and prompt asking if audit
 is ok before continuing."
@@ -2360,7 +2474,8 @@ is ok before continuing."
         (when review
           (switch-to-buffer (current-buffer))
           (unless (yes-or-no-p "Audit of file ok? ") ; not using `y-or-n-p' since it is too easy
-            (error "Audit failed. Checksum will not be calculated for %s" (buffer-file-name (current-buffer)))))
+            (error "Audit failed. Checksum will not be calculated for %s"
+                   (buffer-file-name (current-buffer)))))
         (unless (eq major-mode 'emacs-lisp-mode)
           (error "Not an emacs lisp file!"))
         ;; need to ensure that it is actually elisp
@@ -2374,6 +2489,12 @@ is ok before continuing."
                           "\n)"))
           (error (error "Not an emacs lisp file!")))
         (intern (secure-hash cypher (current-buffer)))))))
+
+(defun resum (cypher buffer)
+  "Checksum of BUFFER under CYPHER." ; minimal for maximal porability
+  (intern (secure-hash cypher buffer)))
+
+(defalias 'resum #'resum-review)
 
 (defun make-reval (cypher path-or-url)
   `(reval ',cypher ',(resum cypher (id->buffer path-or-url) t) ,path-or-url))
@@ -2412,6 +2533,27 @@ If an error is encountered try ALTERNATES in order."
         (switch-to-buffer (current-buffer))
         (when (y-or-n-p "Kill buffer? ")
           (kill-buffer))))))
+#+end_src
+
+The more complex version of this is ~reload~ which includes a cache
+where files are stored locally, and the ability to set a preferred
+local path from whence a particular hash can be sourced. Given that
+reval is intended to be as bare bones as possible so that it can fit
+in the remaining elv space, I'm not including the reload functionality
+in the main block right now.
+#+begin_src elisp
+(defcustom reval-alternates-alist nil
+  "An alist of ((CHECKSUM location ...) ...)")
+
+(defcustom reval-cache-path nil
+  "Override the reval default cache path.")
+
+(defun reval-local-alternate (cypher checksum)
+  ""
+  ;; check explicit alternates
+  ;; check cache
+  ;; check default directory
+  )
 #+end_src
 
 Testing
@@ -2667,7 +2809,8 @@ might be possible.
 =orgstrap= currently does not check all the headers or vars properties that materialized
 onto a source block we probably need to do this. For the time being users need to check
 for any hidden header properties that might be attached if the source block is buried
-within a tree somewhere.
+within a tree somewhere. See ~org-babel-one-header-arg-safe-p~ for one way that this
+might be implemented in the elvs.
 ** Batch mode
 There are a number of use cases for being able to process orgstrapped files in batch mode.
 For example being able to load a file and have it automatically tangle itself vastly simplifies
@@ -2701,6 +2844,14 @@ is always available any time a file is loaded there are a couple of options.
    we would be golden. *This seems like the best bet.*
 7. Accept klobbering.
 8. Advise org-babel-eval to run with org-babel-sha1-sum even when cache is not set to yes
+
+Another possibility would be
+1. put checksums of orgstrap blocks that have been run in a list
+2. use a special header arg ~:run-once yes~ to mark blocks that should not run if
+   their checksum is already on the list.
+
+If used with multiple blocks/multiple revals this would make it possible to
+run only a subset
 ** Tangle once
 When bootstrapping a new system there are many times when want to create a
 file only if it does not already exist. The =:tangle= header does not support
@@ -2744,6 +2895,13 @@ can be verified once and then the documentation around it can change and grow as
 One additional source of noise in addition to comments are defun and
 defmacro docstrings. These should be dropped from the tree if they are
 present. This is now partially implemented via =orgstrap--dedoc=.
+
+The issues in [[*1.2.4][1.2.4]] with inconsistent noweb block
+indentation. Is yet another reason for this. There is some lingering
+inconsistency in exactly how many leading spaces are included when
+nowebbing in elisp forms that include a multi-line string. This is one
+of those extremely annoying but hard to fix issues related to noweb
+and leading whitespace.
 ** Deterministic semantics preserving reordering
 Reorder the expressions used in the orgstrap block alphabetically (or something like that)
 according to a deterministic rule, but not in a way that changes program semantics.
